--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 # = DATA SOURCE
 # ===============================
 database=mariadb
-spring.datasource.url=jdbc:log4jdbc:mariadb:minions-messenger.cq7nzt7xyhmx.ap-northeast-2.rds.amazonaws.com:3306?autoReconnect=true&useSSL=false&rewriteBatchedStatements=true&useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
-spring.datasource.username=bsc
-spring.datasource.password=alsldjswm12@
+spring.datasource.url=jdbc:log4jdbc:mariadb:localhost:3306?autoReconnect=true&useSSL=false&rewriteBatchedStatements=true&useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
+spring.datasource.username=username
+spring.datasource.password=password
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
 # ===============================
